<resources>
    <string name="app_name">SofticesAcademy</string>
    <string name="title_activity_sing_in_activity">SingIn_activity</string>
    <string name="title_activity_android_detail">AndroidDetail</string>
    <string name="gallary">Gallary</string>
    <string name="camera">camera</string>
    <string name="slideshow">string</string>
    <string name="Gallery">String</string>
    <string name="close">string</string>
    <string name="Open">string</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Softices Academy</string>
    <string name="nav_header_subtitle">softices.academy@academy.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name_error">Enter valid name</string>
    <string name="password_error">Enter Valid Password</string>
    <string name="Email_Error">Enter Valid Email Address</string>
    <string name="confirm_pass_error">password not match</string>
    <string name="hint_Email">Enter Email</string>
    <string name="hint_password">Enter password</string>
    <string name="Btn_login">Login</string>
    <string name="txt_Sinup">You have no account?</string>
    <string name="hint_Name">Enter your Name</string>
    <string name="hint_mobile">Enter your Mobile number</string>
    <string name="hint_confirmpassword">Re-enter password</string>
    <string name="btn_signup">Sign Up</string>
    <string name="txt_have_account">If you have an account!</string>
    <string name="toast_error_name">Full Name is required</string>
    <string name="toast_error_mail">Mail is Invalid</string>
    <string name="toast_error_password">Enter correct password</string>
    <string name="toast_error_confirmpassword">Password not match</string>
    <string name="toast_error_number">mobile number must be 10 digit</string>
    <string name="toast_message_singup">Singup successfully....</string>
    <string name="toast_login_success">Welcome Softices Academy.</string>
    <string name="title_activity_services">ServicesActivity</string>
    <string name="btn_start_services">Start Services</string>
    <string name="btn_stop_services">Stop Services</string>
    <string name="toast_regitration">Regitration Successfully.</string>
    <string name="contact_name">Name:</string>
    <string name="contact_number">Phone Number:</string>
    <string name="password">Password</string>
    <string name="number">Number</string>
    <string name="email">Email</string>
    <string name="text_title">String</string>
    <string name="Name">User Name:</string>
    <string name="Email">User Email:</string>
</resources>
