<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ab_sidenavbarcolor"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_user_profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/user_profile_image_shap" />

            <android.support.v7.widget.CardView
                android:id="@+id/Layout_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_user_profile_image"
                app:cardCornerRadius="25dp"
                app:cardElevation="25dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <RelativeLayout
                        android:id="@+id/sin_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/layout_login"
                        android:gravity="center">

                        <EditText
                            android:id="@+id/edt_name"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="25dp"
                            android:background="@drawable/ic_button_style"
                            android:hint="@string/hint_Name"
                            android:inputType=""
                            android:textAlignment="center"
                            android:textSize="10dp" />

                        <EditText
                            android:id="@+id/edt_email"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_below="@id/edt_name"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="25dp"
                            android:background="@drawable/ic_button_style"
                            android:hint="@string/hint_Email"
                            android:inputType=""
                            android:textAlignment="center"
                            android:textSize="10sp" />

                        <EditText
                            android:id="@+id/edt_mobilenumber"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_below="@id/edt_email"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="25dp"
                            android:background="@drawable/ic_button_style"
                            android:hint="@string/hint_mobile"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:textAlignment="center"
                            android:textSize="10sp" />

                        <EditText
                            android:id="@+id/edt_password"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_below="@id/radiobtn_layout"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="25dp"
                            android:background="@drawable/ic_button_style"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            android:textAlignment="center"
                            android:textSize="10sp" />

                        <RadioGroup
                            android:id="@+id/radiobtn_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/edt_mobilenumber"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radiobtn_male"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="20dp"
                                android:checked="true"
                                android:text="Male" />

                            <RadioButton
                                android:id="@+id/radiobtn_female"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:text="Female" />

                        </RadioGroup>

                        <EditText
                            android:id="@+id/edt_confirpass"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_below="@id/edt_password"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="25dp"
                            android:background="@drawable/ic_button_style"
                            android:hint="@string/hint_confirmpassword"
                            android:inputType="textPassword"
                            android:textAlignment="center"
                            android:textSize="10dp" />

                        <Button
                            android:id="@+id/btn_singup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/edt_confirpass"
                            android:layout_centerHorizontal="true"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="25dp"
                            android:layout_marginRight="25dp"
                            android:layout_marginBottom="15dp"
                            android:background="@drawable/ic_button_style"
                            android:text="@string/btn_signup"
                            android:textSize="15dp" />

                        <TextView
                            android:id="@+id/txt_account"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/btn_singup"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="10dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/txt_have_account"
                            android:textAllCaps="true"
                            android:textColor="@color/Button_color"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                    </RelativeLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>