<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Backgroundcolor"
    tools:context=".activities.AccountDetailsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_services"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/Button_color"
        android:gravity="center"
        android:textAlignment="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="Profile"
            android:textColor="@color/Backgroundcolor"
            android:textSize="25dp" />
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/iv_user_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignEnd="@+id/layout_edit"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:background="@color/Backgroundcolor"
        android:contentDescription="TODO"
        android:src="@drawable/ic_avatar_user" />


    <android.support.v7.widget.CardView
        android:id="@+id/user_data_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:background="@color/Backgroundcolor"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:id="@+id/tv_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/theme">


            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="1dp"
                android:text="Username"
                android:textColor="@color/Fontcolor" />

            <TextView
                android:id="@+id/tv_name_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/contact_name"
                android:textColor="@color/EditText"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_name_profile"
                android:layout_centerHorizontal="true"
                android:text="User Email"
                android:textColor="@color/Fontcolor" />

            <TextView
                android:id="@+id/tv_email_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_name_profile"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:textColor="@color/EditText"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_email_profile"
                android:layout_centerHorizontal="true"
                android:text="Number"
                android:textColor="@color/Fontcolor" />

            <TextView
                android:id="@+id/tv_number_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_email_profile"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:inputType="number"
                android:maxLength="10"
                android:text="@string/number"
                android:textColor="@color/EditText"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_number_profile"
                android:layout_centerHorizontal="true"
                android:text="User password"
                android:textColor="@color/Fontcolor" />

            <TextView
                android:id="@+id/tv_password_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_number_profile"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:text="@string/password"
                android:textColor="@color/EditText"
                android:textSize="15dp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/layout_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_data_cardview"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_update_user"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/button_roundshap"
            android:gravity="center"
            android:text="Edit"
            android:textSize="20dp" />

    </LinearLayout>
</RelativeLayout>